--- a/public/pages/member.html
+++ b/public/pages/member.html
@@ -36,7 +36,7 @@
         <p>Menu</p>
         <button><a href="/deposit-req">Deposit</a></button>
         <button><a href="/withdraw-req">Withdraw</a></button>
-        <button><a href="/">Cicil Murobahah</a></button>
+        <button><a href="/pay-murobahah">Cicil Murobahah</a></button>
         <button><a href="/user-setting">Pengaturan</a></button>
         <button>Logout</button>
         <hr>
