--- a/public/pages/adm-input.html
+++ b/public/pages/adm-input.html
@@ -16,6 +16,10 @@
             <input type="text" name="ID" placeholder="UID">
             <input type="text" name="Amount" placeholder="Amount (Rp)" required>
             <select name="Type" required>
+                <option value="IP">IP</option>
+                <option value="IW">IW</option>
+                <option value="SS+">SS+</option>
+                <option value="SS-">SS-</option>
                 <option value="SHU">SHU</option>
                 <option value="Bonus">Bonus</option>
             </select>
